from typing import Any, Dict, List, Optional

import pandas as pd


class Risk_Module:
    """
    VERANTWORTUNG: Mathematische Modelle, Risikokennzahlen, Signalgenerierung.
    NUR MATHEMATIK, KEINE DATENMANIPULATION (NUR READ-ONLY DF).
    KEIN I/O (Kein Internet/API).
    """

    def _process_metrics(self, df: pd.DataFrame) -> Dict[str, Any]:
        """
        Interne Logik zur Berechnung von Risikokennzahlen aus einem sauberen DataFrame.
        Dies ist eine exemplarische Implementierung.

        Args:
            df (pd.DataFrame): Der bereinigte DataFrame mit Finanzdaten.

        Returns:
            Dict[str, Any]: Ein Dictionary mit berechneten Risikokennzahlen.
        """
        metrics = {}
        if df.empty:
            return {"status": "error", "message": "Input DataFrame is empty."}

        # Beispielberechnungen (Platzhalter)
        metrics["volatility"] = df["Close"].pct_change().std() * (
            252**0.5
        )  # Annualisierte Volatilität
        metrics["average_return"] = (
            df["Close"].pct_change().mean() * 252
        )  # Annualisierte Rendite
        metrics["last_price"] = df["Close"].iloc[-1]
        metrics["num_data_points"] = len(df)
        metrics["tickers"] = (
            list(df.columns.get_level_values(1).unique())
            if isinstance(df.columns, pd.MultiIndex)
            else [df.name]
        )

        return metrics

    def fetch_raw_risk_data(self) -> Optional[Dict[str, Any]]:
        """
        Holt Rohdaten für das Risikomodul. Gemäß der Architekturregel "KEIN I/O"
        für dieses Modul, implementieren wir dies als Platzhalter, der keine
        eigentliche I/O-Operation durchführt, da Daten über den Data_Transformer
        empfangen werden sollten.

        Returns:
            Optional[Dict[str, Any]]: None, da dieses Modul keine Daten direkt holt.
        """
        print(
            "Warnung: fetch_raw_risk_data wurde aufgerufen. Dieses Modul sollte keine I/O durchführen."
        )
        print("Daten sollten vom Data_Transformer übergeben werden.")
        return None  # Sollte keine Daten von externen Quellen laden

    def display_risk_metrics(self, metrics: Dict[str, Any]):
        """
        Zeigt die berechneten Risikokennzahlen an.

        Args:
            metrics (Dict[str, Any]): Ein Dictionary mit Risikokennzahlen.
        """
        print("\n--- Risikokennzahlen ---")
        if not metrics or metrics.get("status") == "error":
            print(
                metrics.get(
                    "message",
                    "Keine Risikokennzahlen verfügbar oder Fehler aufgetreten.",
                )
            )
            return

        for key, value in metrics.items():
            if isinstance(value, float):
                print(f"{key.replace('_', ' ').capitalize()}: {value:.4f}")
            else:
                print(f"{key.replace('_', ' ').capitalize()}: {value}")
        print("------------------------")

    def generate_action_recommendations(self, metrics: Dict[str, Any]) -> List[str]:
        """
        Generiert Handlungsempfehlungen basierend auf den Risikokennzahlen.
        Dies ist eine exemplarische, vereinfachte Logik.

        Args:
            metrics (Dict[str, Any]): Ein Dictionary mit Risikokennzahlen.

        Returns:
            List[str]: Eine Liste von empfohlenen Aktionen.
        """
        recommendations = []
        if not metrics or metrics.get("status") == "error":
            recommendations.append(
                "Keine Empfehlungen: Keine gültigen Metriken verfügbar."
            )
            return recommendations

        volatility = metrics.get("volatility", 0.0)
        avg_return = metrics.get("average_return", 0.0)

        if volatility > 0.30:  # Beispielwert für hohe Volatilität
            recommendations.append(
                "Risikohinweis: Hohe Volatilität festgestellt. Vorsicht geboten."
            )
        elif volatility < 0.10:  # Beispielwert für niedrige Volatilität
            recommendations.append(
                "Hinweis: Niedrige Volatilität. Möglicherweise geringeres Risiko, aber auch geringere Renditechancen."
            )

        if avg_return > 0.15:  # Beispielwert für gute Rendite
            recommendations.append(
                "Positive Performance: Durchschnittliche Rendite ist gut."
            )
        elif avg_return < 0.0:
            recommendations.append(
                "Negative Performance: Durchschnittliche Rendite ist negativ."
            )

        if not recommendations:
            recommendations.append(
                "Keine spezifischen Empfehlungen basierend auf den aktuellen Metriken."
            )

        return recommendations
